--- a/index.html
+++ b/index.html
@@ -42,14 +42,31 @@
 	    a {
 		    color : rgb();
 	    }
+	    .small {
+		  font-size : 95%;
+	    }
 	   }
 	   }
 	   }
     </style>
 </head>
-   <body>
-     <h1>August Borne's</h1>
-     <h2>Musical Reference Guide<h2>
-     <p>List of 7 major scales:<br>IONIAN<br>DORIAN<br>PHRYGIAN<br>LYDIAN<br>MIXOLYDIAN<br>AEOLIAN<br>LOCRIAN</p>
-   </body>
+          <body>
+             <h1>August Borne's</h1>
+             <h1 class="small">Musical Reference Guide<h1>
+             <p>List of 7 major scales:<br>IONIAN<br>DORIAN<br>PHRYGIAN<br>LYDIAN<br>MIXOLYDIAN<br>AEOLIAN<br>LOCRIAN</p>
+		     <h3>major scale:<br>
+			     A,B,C#/Db,D,E,F#/Gb,G#/Ab,A<br>
+			     A#/Bb,C,D,D#/Eb,F,G,A,A#/Bb<br>
+			     B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab,A#/Bb,B<br>
+			     C,D,E,F,G,A,B,C<br>
+			     C#/Db,D#/Eb,F,F#/Gb,G#/Ab,A#/Bb,C,C#/Db<br>
+			     D,E,F#/Gb,G,A,B,C#/Db,D<br>
+			     D#/Eb,F,G,G#/Ab,A#/Bb,C,D,D#/Eb<br>
+			     E,F#/Gb,G#/Ab,A,B,C#/Db,D#/Eb,E<br>
+			     F,G,A,A#/Bb,C,D,E,F<br>
+			     F#/Gb,G#/Ab,A#/Bb,B,C#/Db,D#/Eb,F,F#/Gb<br>
+			     G,A,B,C,D,E,F#/Gb,G<br>
+			     G#/Ab,A#/Bb,C,C#/Db,D#/Eb,F,G,G#/Ab<br>
+		     </h3>
+          </body>
 </html>
