--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	            padding-left : 10%;
 		    padding-top : 5%;
             }
-            h4 {
+            h3 {
 	            color : rgb(108, 235, 224);
 	            padding-left : 20%;
             }
@@ -51,7 +51,7 @@
     </style>
 </head>
           <body>
-             <h1>August Borne's</h1>
+		  <h1>August Borne's<br><div class="small">Musical Reference Guide</div></h1>
              <h1 class="small">Musical Reference Guide<h1>
              <p>List of 7 major scales:<br>IONIAN<br>DORIAN<br>PHRYGIAN<br>LYDIAN<br>MIXOLYDIAN<br>AEOLIAN<br>LOCRIAN</p>
 		     <h3>major scale:<br>
@@ -67,6 +67,20 @@
 			     F#/Gb,G#/Ab,A#/Bb,B,C#/Db,D#/Eb,F,F#/Gb<br>
 			     G,A,B,C,D,E,F#/Gb,G<br>
 			     G#/Ab,A#/Bb,C,C#/Db,D#/Eb,F,G,G#/Ab<br>
+		     </h3>
+		     <h3>    dorian scale:<br>
+			     A,B,C,D,E,F#/Gb,G,A<br>
+			     A#/Bb,C,C#/Db,D#/Eb,F,G,G#/Ab,A#/Bb<br>
+			     B,C#/Db,D,E,F#/Gb,G#/Ab,A,B<br>
+			     C,D,D#/Eb,F,G,A,A#/Bb,C<br>
+			     C#/Db,D#/Eb,E,F#/Gb,G#/Ab,A#/Bb,B,C#/Db<br>
+			     D,E,F,G,A,B,C,D<br>
+			     D#/Eb,F,F#/Gb,G#/Ab,A#/Bb,C,C#/Db,D#/Eb<br>
+			     E,F#/Gb,G,A,B,C#/Db,D,E<br>
+			     F,G,G#/Ab,A#/Bb,C,D,D#/Eb,F<br>
+			     F#/Gb,G#/Ab,A,B,C#/Db,D#/Eb,E,F#/Gb<br>
+			     G,A,A#/Bb,C,D,E,F,G<br>
+			     G#/Ab,A#/Bb,B,C#/Db,D#/Eb,F,F#/Gb,G#/Ab<br>
 		     </h3>
           </body>
 </html>
