--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <body>
 		  <h1>August Borne's<br><div class="small">Musical Reference Guide</div></h1>
              <h1 class="small">Musical Reference Guide<h1>
-		     <p>List of 7 major scales:<br> <a href=.major>MAJOR/IONIAN</a><br><a href=.dorian>DORIAN</a><br>PHRYGIAN<br>LYDIAN<br>MIXOLYDIAN<br>AEOLIAN<br>LOCRIAN</p>
+		     <p>List of 7 major scales:<br> <a href=".major">MAJOR/IONIAN</a><br><a href=".dorian">DORIAN</a><br>PHRYGIAN<br>LYDIAN<br>MIXOLYDIAN<br>AEOLIAN<br>LOCRIAN</p>
 		     <h3 class="major">major/ionian scale:<br>
 			     A,B,C#/Db,D,E,F#/Gb,G#/Ab,A<br>
 			     A#/Bb,C,D,D#/Eb,F,G,A,A#/Bb<br>
