--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <body>
 		  <h1>August Borne's<br><div class="small">Musical Reference Guide</div></h1>
              <h1 class="small">Musical Reference Guide<h1>
-		     <p>List of 7 major scales:<br> <a href=".major">MAJOR/IONIAN</a><br><a href=".dorian">DORIAN</a><br>PHRYGIAN<br>LYDIAN<br>MIXOLYDIAN<br>AEOLIAN<br>LOCRIAN</p>
-		     <h3 class="major">major/ionian scale:<br>
+		     <p>List of 7 major scales:<br> <a href="#major">MAJOR/IONIAN</a><br><a href="#dorian">DORIAN</a><br>PHRYGIAN<br>LYDIAN<br>MIXOLYDIAN<br>AEOLIAN<br>LOCRIAN</p>
+		     <h3 id="major">major/ionian scale:<br>
 			     A,B,C#/Db,D,E,F#/Gb,G#/Ab,A<br>
 			     A#/Bb,C,D,D#/Eb,F,G,A,A#/Bb<br>
 			     B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab,A#/Bb,B<br>
@@ -68,7 +68,7 @@
 			     G,A,B,C,D,E,F#/Gb,G<br>
 			     G#/Ab,A#/Bb,C,C#/Db,D#/Eb,F,G,G#/Ab<br>
 		     </h3>
-		     <h3 class="dorian">    dorian scale:<br>
+		     <h3 id="dorian">    dorian scale:<br>
 			     A,B,C,D,E,F#/Gb,G,A<br>
 			     A#/Bb,C,C#/Db,D#/Eb,F,G,G#/Ab,A#/Bb<br>
 			     B,C#/Db,D,E,F#/Gb,G#/Ab,A,B<br>
