--- a/index.html
+++ b/index.html
@@ -82,5 +82,75 @@
 			     G,A,A#/Bb,C,D,E,F,G<br>
 			     G#/Ab,A#/Bb,B,C#/Db,D#/Eb,F,F#/Gb,G#/Ab<br>
 		     </h3>
+		     <h3>    phrygian scale:<br>
+			     A,A#/Bb,C,D,E,F,G,A<br>
+			     A#/Bb,B,C#/Db,D#/Eb,F,F#/Gb,G#/Ab,A#/Bb<br>
+			     B,C,D,E,F#/Gb,G,A,B<br>
+			     C,C#/Db,D#/Eb,F,G,G#/Ab,A#/Bb,C<br>
+			     C#/Db,D,E,F#/Gb,G#/Ab,A,B,C#/Db<br>
+			     D,D#/Eb,F,G,A,A#/Bb,C,D<br>
+			     D#/Eb,E,F#/Gb,G#/Ab,A#/Bb,B,C#/Db,D#/Eb<br>
+			     E,F,G,A,B,C,D,E<br>
+			     F,F#/Gb,G#/Ab,A#/Bb,C,C#/Db,D#/Eb,F<br>
+			     F#/Gb,G,A,B,C#/Db,D,E,F#/Gb<br>
+			     G,G#/Ab,A#/Bb,C,D,D#/Eb,F,G<br>
+			     G#/Ab,A,B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab<br>
+		     </h3>
+		     <h3>    lydian scale:<br>
+			     A,B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab,A<br>
+			     A#/Bb,C,D,E,F,G,A,A#/Bb<br>
+			     B,C#/Db,D#/Eb,F,F#/Gb,G#/Ab,A#/Bb,B<br>
+			     C,D,E,F#/Gb,G,A,B,C<br>
+			     C#/Db,D#/Eb,F,G,G#/Ab,A#/Bb,C,C#/Db<br>
+			     D,E,F#/Gb,G#/Ab,A,B,C#/Db,D<br>
+			     D#/Eb,F,G,A,A#/Bb,C,D,D#/Eb<br>
+			     E,F#/Gb,G#/Ab,A#/Bb,B,C#/Db,D#/Eb,E<br>
+			     F,G,A,B,C,D,E,F<br>
+			     F#/Gb,G#/Ab,A#/Bb,C,C#/Db,D#/Eb,F,F#/Gb<br>
+			     G,A,B,C#/Db,D,E,F#/Gb,G<br>
+			     G#/Ab,A#/Bb,C,D,D#/Eb,F,G,G#/Ab<br>
+		     </h3>
+		     <h3>mixolydian scale:<br>
+			     A,B,C#/Db,D,E,F#/Gb,G,A<br>
+			     A#/Bb,C,D,D#/Eb,F,G,G#/Ab,A#/Bb<br>
+			     B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab,A,B<br>
+			     C,D,E,F,G,A,A#/Bb,C<br>
+			     C#/Db,D#/Eb,F,F#/Gb,G#/Ab,A#/Bb,B,C#/Db<br>
+			     D,E,F#/Gb,G,A,B,C,D<br>
+			     D#/Eb,F,G,G#/Ab,A#/Bb,C,C#/Db,D#/Eb<br>
+			     E,F#/Gb,G#/Ab,A,B,C#/Db,D,E<br>
+			     F,G,A,A#/Bb,C,D,D#/Eb,F<br>
+			     F#/Gb,G#/Ab,A#/Bb,B,C#/Db,D#/Eb,E,F#/Gb<br>
+			     G,A,B,C,D,E,F,G<br>
+			     G#/Ab,A#/Bb,C,C#/Db,D#/Eb,F,F#/Gb,G#/Ab<br>
+		     </h3>
+		     <h3>aeolian scale:<br>
+			     A,B,C,D,E,F,G,A<br>
+			     A#/Bb,C,C#/Db,D#/Eb,F,F#/Gb,G#/Ab,A#/Bb<br>
+			     B,C#/Db,D,E,F#/Gb,G,A,B<br>
+			     C,D,D#/Eb,F,G,G#/Ab,A#/Bb,C<br>
+			     C#/Db,D#/Eb,E,F#/Gb,G#/Ab,A,B,C#/Db<br>
+			     D,E,F,G,A,A#/Bb,C,D<br>
+			     D#/Eb,F,F#/Gb,G#/Ab,A#/Bb,B,C#/Db,D#/Eb<br>
+			     E,F#/Gb,G,A,B,C,D,E<br>
+			     F,G,G#/Ab,A#/Bb,C,C#/Db,D#/Eb,F<br>
+			     F#/Gb,G#/Ab,A,B,C#/Db,D,E,F#/Gb<br>
+			     G,A,A#/Bb,C,D,D#/Eb,F,G<br>
+			     G#/Ab,A#/Bb,B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab<br>
+		     </h3>
+		     <h3>locrian scale:<br>
+			     A,A#/Bb,C,D,D#/Eb,F,G,A<br>
+			     A#/Bb,B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab,A#/Bb<br>
+			     B,C,D,E,F,G,A,B<br>
+			     C,C#/Db,D#/Eb,F,F#/Gb,G#/Ab,A#/Bb,C<br>
+			     C#/Db,D,E,F#/Gb,G,A,B,C#/Db<br>
+			     D,D#/Eb,F,G,G#/Ab,A#/Bb,C,D<br>
+			     D#/Eb,E,F#/Gb,G#/Ab,A,B,C#/Db,D#/Eb<br>
+			     E,F,G,A,A#/Bb,C,D,E<br>
+			     F,F#/Gb,G#/Ab,A#/Bb,B,C#/Db,D#/Eb,F<br>
+			     F#/Gb,G,A,B,C,D,E,F#/Gb<br>
+			     G,G#/Ab,A#/Bb,C,C#/Db,D#/Eb,F,G<br>
+			     G#/Ab,A,B,C#/Db,D,E,F#/Gb,G#/Ab<br>
+		     </h3>
           </body>
 </html>
