--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <body>
 		  <h1>August Borne's<br><div class="small">Musical Reference Guide</div></h1>
              <h1 class="small">Musical Reference Guide<h1>
-		     <p>List of 7 major scales:<br> <a href="#major">MAJOR/IONIAN</a><br><a href="#dorian">DORIAN</a><br>PHRYGIAN<br>LYDIAN<br>MIXOLYDIAN<br>AEOLIAN<br>LOCRIAN</p>
+		     <p>List of 7 major scales:<br> <a href="#major">MAJOR/IONIAN</a><br><a href="#dorian">DORIAN</a><br><a href="#phrygian">PHRYGIAN</a><br><a href="lydian">LYDIAN</a><br><a href="mixolydian">MIXOLYDIAN</a><br><a href="aeolian">AEOLIAN</a><br><a href="locrian">LOCRIAN</a></p>
 		     <h3 id="major">major/ionian scale:<br>
 			     A,B,C#/Db,D,E,F#/Gb,G#/Ab,A<br>
 			     A#/Bb,C,D,D#/Eb,F,G,A,A#/Bb<br>
@@ -82,7 +82,7 @@
 			     G,A,A#/Bb,C,D,E,F,G<br>
 			     G#/Ab,A#/Bb,B,C#/Db,D#/Eb,F,F#/Gb,G#/Ab<br>
 		     </h3>
-		     <h3>    phrygian scale:<br>
+		     <h3 id="phrygian">    phrygian scale:<br>
 			     A,A#/Bb,C,D,E,F,G,A<br>
 			     A#/Bb,B,C#/Db,D#/Eb,F,F#/Gb,G#/Ab,A#/Bb<br>
 			     B,C,D,E,F#/Gb,G,A,B<br>
@@ -96,7 +96,7 @@
 			     G,G#/Ab,A#/Bb,C,D,D#/Eb,F,G<br>
 			     G#/Ab,A,B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab<br>
 		     </h3>
-		     <h3>    lydian scale:<br>
+		     <h3 id="lydian">    lydian scale:<br>
 			     A,B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab,A<br>
 			     A#/Bb,C,D,E,F,G,A,A#/Bb<br>
 			     B,C#/Db,D#/Eb,F,F#/Gb,G#/Ab,A#/Bb,B<br>
@@ -110,7 +110,7 @@
 			     G,A,B,C#/Db,D,E,F#/Gb,G<br>
 			     G#/Ab,A#/Bb,C,D,D#/Eb,F,G,G#/Ab<br>
 		     </h3>
-		     <h3>mixolydian scale:<br>
+		     <h3 id="mixolydian">mixolydian scale:<br>
 			     A,B,C#/Db,D,E,F#/Gb,G,A<br>
 			     A#/Bb,C,D,D#/Eb,F,G,G#/Ab,A#/Bb<br>
 			     B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab,A,B<br>
@@ -124,7 +124,7 @@
 			     G,A,B,C,D,E,F,G<br>
 			     G#/Ab,A#/Bb,C,C#/Db,D#/Eb,F,F#/Gb,G#/Ab<br>
 		     </h3>
-		     <h3>aeolian scale:<br>
+		     <h3 id="aeolian">aeolian scale:<br>
 			     A,B,C,D,E,F,G,A<br>
 			     A#/Bb,C,C#/Db,D#/Eb,F,F#/Gb,G#/Ab,A#/Bb<br>
 			     B,C#/Db,D,E,F#/Gb,G,A,B<br>
@@ -138,7 +138,7 @@
 			     G,A,A#/Bb,C,D,D#/Eb,F,G<br>
 			     G#/Ab,A#/Bb,B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab<br>
 		     </h3>
-		     <h3>locrian scale:<br>
+		     <h3 id="locrian">locrian scale:<br>
 			     A,A#/Bb,C,D,D#/Eb,F,G,A<br>
 			     A#/Bb,B,C#/Db,D#/Eb,E,F#/Gb,G#/Ab,A#/Bb<br>
 			     B,C,D,E,F,G,A,B<br>
