--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
           <body>
 		  <h1>August Borne's<br><div class="small">Musical Reference Guide</div></h1>
-		     <p>List of 7 major scales:<br> <a href="#major">MAJOR/IONIAN</a><br><a href="#dorian">DORIAN</a><br><a href="#phrygian">PHRYGIAN</a><br><a href="lydian">LYDIAN</a><br><a href="mixolydian">MIXOLYDIAN</a><br><a href="aeolian">AEOLIAN</a><br><a href="locrian">LOCRIAN</a></p>
+		     <p>List of 7 major scales:<br> <a href="#major">MAJOR/IONIAN</a><br><a href="#dorian">DORIAN</a><br><a href="#phrygian">PHRYGIAN</a><br><a href="#lydian">LYDIAN</a><br><a href="#mixolydian">MIXOLYDIAN</a><br><a href="#aeolian">AEOLIAN</a><br><a href="#locrian">LOCRIAN</a></p>
 		     <h3 id="major">major/ionian scale:<br>
 			     A,B,C#/Db,D,E,F#/Gb,G#/Ab,A<br>
 			     A#/Bb,C,D,D#/Eb,F,G,A,A#/Bb<br>
